--- a/mock/index.html
+++ b/mock/index.html
@@ -5,8 +5,25 @@
 		<title></title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
+
+		<style>
+			nav {
+				border-bottom: 1px solid #CCC;
+				padding: 10px 0;
+				margin-bottom: 20px;
+			}
+
+			nav a {
+				display: inline;
+				margin: 0 10px;
+			}
+		</style>
 	</head>
 	<body ng-app="mock">
+		<nav>
+			<a href="#/logger">Logger</a>
+		</nav>
+
 		<div ng-view=""></div>
 		<script src="../bower_components/angular/angular.js"></script>
         <script src="../bower_components/angular-route/angular-route.js"></script>
