Dict first phase

--- a/mock/index.html
+++ b/mock/index.html
@@ -23,6 +23,7 @@
 		<nav>
 			<a href="#/logger">Logger</a>
 			<a href="#/config">Config</a>
+			<a href="#/dict">Dict</a>
 		</nav>
 
 		<div ng-view=""></div>
@@ -34,8 +35,12 @@
 		<script src="../modules/config/config.mod.js"></script>
 		<script src="../modules/config/config.fil.js"></script>
 		<script src="../modules/config/config.pro.js"></script>
+		<script src="../modules/dict/dict.mod.js"></script>
+		<script src="../modules/dict/dict.fil.js"></script>
+		<script src="../modules/dict/dict.pro.js"></script>
 		<script src="app.js"></script>
         <script src="pages/logger.js"></script>
 		<script src="pages/config.js"></script>
+		<script src="pages/dict.js"></script>
 	</body>
 </html>
