--- a/mock/index.html
+++ b/mock/index.html
@@ -29,17 +29,18 @@
 		<div ng-view=""></div>
 		<script src="global.js"></script>
 		<script src="../bower_components/angular/angular.js"></script>
-        <script src="../bower_components/angular-route/angular-route.js"></script>
-        <script src="../modules/logger/logger.mod.js"></script>
-        <script src="../modules/logger/logger.ser.js"></script>
+		<script src="../bower_components/angular-route/angular-route.js"></script>
+		<script src="../modules/logger/logger.mod.js"></script>
+		<script src="../modules/logger/logger.ser.js"></script>
 		<script src="../modules/config/config.mod.js"></script>
 		<script src="../modules/config/config.fil.js"></script>
 		<script src="../modules/config/config.pro.js"></script>
 		<script src="../modules/dict/dict.mod.js"></script>
 		<script src="../modules/dict/dict.fil.js"></script>
 		<script src="../modules/dict/dict.pro.js"></script>
+		<script src="../modules/dict/dict.dir.js"></script>
 		<script src="app.js"></script>
-        <script src="pages/logger.js"></script>
+		<script src="pages/logger.js"></script>
 		<script src="pages/config.js"></script>
 		<script src="pages/dict.js"></script>
 	</body>
