--- a/mock/pages/dict.html
+++ b/mock/pages/dict.html
@@ -1,9 +1,12 @@
 <strong>Mode:</strong>
-<select ng-model="mode">
+<select ng-model="mode" ng-change="updateMode()">
 	<option value="normal">standard</option>
 	<option value="all">all</option>
 	<option value="missing">missing</option>
 </select>
- <br/><br/>
-<strong>Valued key:</strong> {{'VALUED_KEY' | barney_dict}} <br/>
-<strong>Void key:</strong> {{'VOID_KEY' | barney_dict}}
+
+<br/><br/>
+
+<strong>Valued key:</strong> {{'VALUED_KEY' | dict}} <br/>
+<strong>Valued key (html):</strong> <dict key='VALUED_HTML_KEY'></dict> <br/>
+<strong>Void key:</strong> {{'VOID_KEY' | dict}}
