Started analytics module

--- a/mock/index.html
+++ b/mock/index.html
@@ -24,6 +24,7 @@
 			<a href="#/logger">Logger</a>
 			<a href="#/config">Config</a>
 			<a href="#/dict">Dict</a>
+			<a href="#/analytics">Analytics</a>
 		</nav>
 
 		<div ng-view=""></div>
@@ -39,9 +40,12 @@
 		<script src="../modules/dict/dict.fil.js"></script>
 		<script src="../modules/dict/dict.pro.js"></script>
 		<script src="../modules/dict/dict.dir.js"></script>
+		<script src="../modules/analytics/analytics.mod.js"></script>
+		<script src="../modules/analytics/analytics.ser.js"></script>
 		<script src="app.js"></script>
 		<script src="pages/logger.js"></script>
 		<script src="pages/config.js"></script>
 		<script src="pages/dict.js"></script>
+		<script src="pages/analytics.js"></script>
 	</body>
 </html>
