--- a/mock/index.html
+++ b/mock/index.html
@@ -47,5 +47,14 @@
 		<script src="pages/config.js"></script>
 		<script src="pages/dict.js"></script>
 		<script src="pages/analytics.js"></script>
+
+		<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-40538478-2', 'auto');
+		</script>
 	</body>
 </html>
