--- a/mock/index.html
+++ b/mock/index.html
@@ -25,6 +25,7 @@
 			<a href="#/config">Config</a>
 			<a href="#/dict">Dict</a>
 			<a href="#/analytics">Analytics</a>
+			<a href="#/newtontrack">Newton Track</a>
 		</nav>
 
 		<div ng-view=""></div>
@@ -42,11 +43,18 @@
 		<script src="../modules/dict/dict.dir.js"></script>
 		<script src="../modules/analytics/analytics.mod.js"></script>
 		<script src="../modules/analytics/analytics.ser.js"></script>
+		<script src="../modules/newtontrack/newtontrack.mod.js"></script>
+		<script src="../modules/newtontrack/newtontrack.ser.js"></script>
+		<script src="../modules/newtontrack/newtontrack.dir.js"></script>
+		
 		<script src="app.js"></script>
 		<script src="pages/logger.js"></script>
 		<script src="pages/config.js"></script>
 		<script src="pages/dict.js"></script>
 		<script src="pages/analytics.js"></script>
+		<script src="pages/newtontrack.js"></script>
+		
+	
 
 		<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
