--- a/mock/index.html
+++ b/mock/index.html
@@ -35,9 +35,11 @@
 			<a href="#/newtontrack">Newton Track</a>
 			<a href="#/masonry">Masonry</a>
 			<a href="#/meta">Meta</a>
+			<a href="#/utility?query=1">Utility</a>
 		</nav>
 
 		<div ng-view=""></div>
+		
 		<script src="global.js"></script>
 		<script src="../bower_components/angular/angular.js"></script>
 		<script src="../bower_components/angular-route/angular-route.js"></script>
@@ -59,6 +61,8 @@
 		<script src="../modules/masonry/masonry.dir.js"></script>
 		<script src="../modules/meta/meta.mod.js"></script>
 		<script src="../modules/meta/meta.ser.js"></script>
+		<script src="../modules/utility/utility.mod.js"></script>
+		<script src="../modules/utility/utility.ser.js"></script>
 		
 		<script src="app.js"></script>
 		<script src="pages/logger.js"></script>
@@ -69,6 +73,7 @@
 		<script src="pages/masonry.js"></script>
 		<script src="pages/meta.js"></script>
 		<script src="pages/meta2.js"></script>
+		<script src="pages/utility.js"></script>
 		
 		<script src="//static.newton.pm/js/current/newton.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.0/masonry.pkgd.js"></script>
