--- a/mock/index.html
+++ b/mock/index.html
@@ -36,6 +36,7 @@
 			<a href="#/masonry">Masonry</a>
 			<a href="#/meta">Meta</a>
 			<a href="#/utility?query=1">Utility</a>
+			<a href="#/storage">Storage</a>
 		</nav>
 
 		<div ng-view=""></div>
@@ -63,6 +64,8 @@
 		<script src="../modules/meta/meta.ser.js"></script>
 		<script src="../modules/utility/utility.mod.js"></script>
 		<script src="../modules/utility/utility.ser.js"></script>
+		<script src="../modules/storage/storage.mod.js"></script>
+		<script src="../modules/storage/storage.ser.js"></script>
 		
 		<script src="app.js"></script>
 		<script src="pages/logger.js"></script>
@@ -74,6 +77,7 @@
 		<script src="pages/meta.js"></script>
 		<script src="pages/meta2.js"></script>
 		<script src="pages/utility.js"></script>
+		<script src="pages/storage.js"></script>
 		
 		<script src="//static.newton.pm/js/current/newton.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.0/masonry.pkgd.js"></script>
