Added js object as storage type

--- a/mock/index.html
+++ b/mock/index.html
@@ -65,7 +65,7 @@
 		<script src="../modules/utility/utility.mod.js"></script>
 		<script src="../modules/utility/utility.ser.js"></script>
 		<script src="../modules/storage/storage.mod.js"></script>
-		<script src="../modules/storage/storage.ser.js"></script>
+		<script src="../modules/storage/storage.pro.js"></script>
 		
 		<script src="app.js"></script>
 		<script src="pages/logger.js"></script>
