Stargate: initialize and openUrl, not ready release

--- a/mock/index.html
+++ b/mock/index.html
@@ -37,6 +37,7 @@
 			<a href="#/meta">Meta</a>
 			<a href="#/utility?query=1">Utility</a>
 			<a href="#/storage">Storage</a>
+			<a href="#/stargate">Stargate</a>
 		</nav>
 
 		<div ng-view=""></div>
@@ -44,6 +45,7 @@
 		<script src="global.js"></script>
 		<script src="../bower_components/angular/angular.js"></script>
 		<script src="../bower_components/angular-route/angular-route.js"></script>
+		<script src="../bower_components/stargateJs/public/bundle.min.js"></script>
 		<script src="../modules/logger/logger.mod.js"></script>
 		<script src="../modules/logger/logger.ser.js"></script>
 		<script src="../modules/config/config.mod.js"></script>
@@ -66,6 +68,8 @@
 		<script src="../modules/utility/utility.ser.js"></script>
 		<script src="../modules/storage/storage.mod.js"></script>
 		<script src="../modules/storage/storage.pro.js"></script>
+		<script src="../modules/stargate/stargate.mod.js"></script>
+		<script src="../modules/stargate/stargate.pro.js"></script>
 		
 		<script src="app.js"></script>
 		<script src="pages/logger.js"></script>
@@ -78,6 +82,7 @@
 		<script src="pages/meta2.js"></script>
 		<script src="pages/utility.js"></script>
 		<script src="pages/storage.js"></script>
+		<script src="pages/stargate.js"></script>
 		
 		<script src="//static.newton.pm/js/current/newton.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.0/masonry.pkgd.js"></script>
