Stargate module refactoring

--- a/mock/index.html
+++ b/mock/index.html
@@ -45,7 +45,7 @@
 		<script src="global.js"></script>
 		<script src="../bower_components/angular/angular.js"></script>
 		<script src="../bower_components/angular-route/angular-route.js"></script>
-		<script src="../bower_components/stargateJs/public/bundle.min.js"></script>
+		<script src="../bower_components/stargateJs/public/stargate.js"></script>
 		<script src="../modules/logger/logger.mod.js"></script>
 		<script src="../modules/logger/logger.ser.js"></script>
 		<script src="../modules/config/config.mod.js"></script>
