--- a/mock/index.html
+++ b/mock/index.html
@@ -38,6 +38,7 @@
 			<a href="#/utility?query=1">Utility</a>
 			<a href="#/storage">Storage</a>
 			<a href="#/stargate">Stargate</a>
+			<a href="#/callbacky">Callbacky</a>
 		</nav>
 
 		<div ng-view=""></div>
@@ -70,6 +71,8 @@
 		<script src="../modules/storage/storage.pro.js"></script>
 		<script src="../modules/stargate/stargate.mod.js"></script>
 		<script src="../modules/stargate/stargate.pro.js"></script>
+		<script src="../modules/callbacky/callbacky.mod.js"></script>
+		<script src="../modules/callbacky/callbacky.pro.js"></script>
 		
 		<script src="app.js"></script>
 		<script src="pages/logger.js"></script>
@@ -83,6 +86,7 @@
 		<script src="pages/utility.js"></script>
 		<script src="pages/storage.js"></script>
 		<script src="pages/stargate.js"></script>
+		<script src="pages/callbacky.js"></script>
 		
 		<script src="//static.newton.pm/js/current/newton.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.0/masonry.pkgd.js"></script>
