--- a/mock/index.html
+++ b/mock/index.html
@@ -68,7 +68,11 @@
 		<script src="../modules/utility/utility.mod.js"></script>
 		<script src="../modules/utility/utility.ser.js"></script>
 		<script src="../modules/storage/storage.mod.js"></script>
+		<script src="../modules/storage/storage-subset.mod.js"></script>
 		<script src="../modules/storage/storage.pro.js"></script>
+		<script src="../modules/storage/depot.pro.js"></script>
+		<script src="../modules/storage/chicken.pro.js"></script>
+		<script src="../modules/storage/biscuit.pro.js"></script>
 		<script src="../modules/stargate/stargate.mod.js"></script>
 		<script src="../modules/stargate/stargate.pro.js"></script>
 		<script src="../modules/callbacky/callbacky.mod.js"></script>
