--- a/mock/pages/storage.html
+++ b/mock/pages/storage.html
@@ -2,6 +2,7 @@
 	<select ng-model="typeStorage">
 		<option value="localStorage">local storage</option>
 		<option value="jsObject">js object</option>
+		<option value="cookie">cookie</option>
 	</select>
 	<button ng-click="initStorage()">INIT STORAGE</button>
 </div>
