New Newton module

--- a/mock/index.html
+++ b/mock/index.html
@@ -32,7 +32,7 @@
 			<a href="#/config">Config</a>
 			<a href="#/dict">Dict</a>
 			<a href="#/analytics">Analytics</a>
-			<a href="#/newtontrack">Newton Track</a>
+			<a href="#/newton">Newton</a>
 			<a href="#/masonry">Masonry</a>
 			<a href="#/meta">Meta</a>
 			<a href="#/utility?query=1">Utility</a>
@@ -58,9 +58,8 @@
 		<script src="../modules/dict/dict.dir.js"></script>
 		<script src="../modules/analytics/analytics.mod.js"></script>
 		<script src="../modules/analytics/analytics.ser.js"></script>
-		<script src="../modules/newtontrack/newtontrack.mod.js"></script>
-		<script src="../modules/newtontrack/newtontrack.ser.js"></script>
-		<script src="../modules/newtontrack/newtontrack.dir.js"></script>
+		<script src="../modules/newton/newton.mod.js"></script>
+		<script src="../modules/newton/newton.ser.js"></script>
 		<script src="../modules/masonry/masonry.mod.js"></script>
 		<script src="../modules/masonry/masonry.dir.js"></script>
 		<script src="../modules/meta/meta.mod.js"></script>
@@ -83,7 +82,7 @@
 		<script src="pages/config.js"></script>
 		<script src="pages/dict.js"></script>
 		<script src="pages/analytics.js"></script>
-		<script src="pages/newtontrack.js"></script>
+		<script src="pages/newton.js"></script>
 		<script src="pages/masonry.js"></script>
 		<script src="pages/meta.js"></script>
 		<script src="pages/meta2.js"></script>
