cleaning mock, update doc

--- a/mock/pages/logger.html
+++ b/mock/pages/logger.html
@@ -4,6 +4,9 @@
 <input type="text" ng-model="string" placeholder="Insert string to print" /> <br/> <br/>
 <button ng-click="log()">LOG</button> 
 <button ng-click="info()">INFO</button> 
-<button ng-click="debug()">DEBUG</button> 
+<button ng-click="table()">TABLE</button> 
 <button ng-click="warn()">WARN</button> 
 <button ng-click="error()">ERROR</button> 
+<br><hr>
+<button ng-click="startRecording()">START</button> 
+<button ng-click="endRecording()">END</button> 
