--- a/mock/index.html
+++ b/mock/index.html
@@ -33,11 +33,9 @@
 			<a href="#/dict">Dict</a>
 			<a href="#/analytics">Analytics</a>
 			<a href="#/newton">Newton</a>
-			<a href="#/masonry">Masonry</a>
 			<a href="#/meta">Meta</a>
 			<a href="#/utility?query=1">Utility</a>
 			<a href="#/storage">Storage</a>
-			<a href="#/stargate">Stargate</a>
 			<a href="#/callbacky">Callbacky</a>
 		</nav>
 
@@ -47,8 +45,11 @@
 		<script src="../bower_components/angular/angular.js"></script>
 		<script src="../bower_components/angular-route/angular-route.js"></script>
 		<script src="../bower_components/stargateJs/public/stargate.js"></script>
+		<script src="../modules/logger/logger.van.js"></script>
+		<script src="../modules/logger/rotating-log.van.js"></script>
 		<script src="../modules/logger/logger.mod.js"></script>
 		<script src="../modules/logger/logger.ser.js"></script>
+		<script src="../modules/logger/rotating-logger.ser.js"></script>
 		<script src="../modules/config/config.mod.js"></script>
 		<script src="../modules/config/config.fil.js"></script>
 		<script src="../modules/config/config.pro.js"></script>
@@ -60,8 +61,6 @@
 		<script src="../modules/analytics/analytics.ser.js"></script>
 		<script src="../modules/newton/newton.mod.js"></script>
 		<script src="../modules/newton/newton.ser.js"></script>
-		<script src="../modules/masonry/masonry.mod.js"></script>
-		<script src="../modules/masonry/masonry.dir.js"></script>
 		<script src="../modules/meta/meta.mod.js"></script>
 		<script src="../modules/meta/meta.ser.js"></script>
 		<script src="../modules/utility/utility.mod.js"></script>
@@ -72,8 +71,6 @@
 		<script src="../modules/storage/depot.pro.js"></script>
 		<script src="../modules/storage/chicken.pro.js"></script>
 		<script src="../modules/storage/biscuit.pro.js"></script>
-		<script src="../modules/stargate/stargate.mod.js"></script>
-		<script src="../modules/stargate/stargate.pro.js"></script>
 		<script src="../modules/callbacky/callbacky.mod.js"></script>
 		<script src="../modules/callbacky/callbacky.pro.js"></script>
 		
@@ -83,12 +80,10 @@
 		<script src="pages/dict.js"></script>
 		<script src="pages/analytics.js"></script>
 		<script src="pages/newton.js"></script>
-		<script src="pages/masonry.js"></script>
 		<script src="pages/meta.js"></script>
 		<script src="pages/meta2.js"></script>
 		<script src="pages/utility.js"></script>
 		<script src="pages/storage.js"></script>
-		<script src="pages/stargate.js"></script>
 		<script src="pages/callbacky.js"></script>
 		
 		<script src="//static.newton.pm/js/current/newton.min.js"></script>
