added infinte scroll mock test

--- a/mock/index.html
+++ b/mock/index.html
@@ -37,6 +37,7 @@
 			<a href="#/utility?query=1">Utility</a>
 			<a href="#/storage">Storage</a>
 			<a href="#/callbacky">Callbacky</a>
+			<a href="#/infinite">Infinite</a>
 		</nav>
 
 		<div ng-view=""></div>
@@ -73,6 +74,9 @@
 		<script src="../modules/storage/biscuit.pro.js"></script>
 		<script src="../modules/callbacky/callbacky.mod.js"></script>
 		<script src="../modules/callbacky/callbacky.pro.js"></script>
+		<script src="../modules/infinite/infinite.mod.js"></script>
+		<script src="../modules/infinite/infinite-scroll.dir.js"></script>
+
 		
 		<script src="app.js"></script>
 		<script src="pages/logger.js"></script>
@@ -85,6 +89,7 @@
 		<script src="pages/utility.js"></script>
 		<script src="pages/storage.js"></script>
 		<script src="pages/callbacky.js"></script>
+		<script src="pages/infinite.js"></script>
 		
 		<script src="//static.newton.pm/js/current/newton.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.0/masonry.pkgd.js"></script>
