test also enable infinite scroll

--- a/mock/pages/infinite.html
+++ b/mock/pages/infinite.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<div infinite-scroll foo="foo()" enable="enable" >
+	<div infinite-scroll foo="foo()" enable="enableInfinite" >
 		<div ng-repeat="item in data" >
 		 {{item}} 
   	 </div>
