--- a/mock/index.html
+++ b/mock/index.html
@@ -90,6 +90,7 @@
 		<script src="pages/storage.js"></script>
 		<script src="pages/callbacky.js"></script>
 		<script src="pages/infinite.js"></script>
+		<script src="pages/test.dir.js"></script>
 		
 		<script src="//static.newton.pm/js/current/newton.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.0/masonry.pkgd.js"></script>
