It seems to work

--- a/mock/pages/infinite.html
+++ b/mock/pages/infinite.html
@@ -6,7 +6,7 @@
   	</div>
 	<div ng-show="noContents">empty</div> -->
 
-	<div test enable="flag" callback="callApi()">
+	<div test enable="flag" callback="callApi">
 		<p ng-repeat="item in data">
 			{{item}}
 		</p>
