It seems to work /2

--- a/mock/index.html
+++ b/mock/index.html
@@ -75,7 +75,7 @@
 		<script src="../modules/callbacky/callbacky.mod.js"></script>
 		<script src="../modules/callbacky/callbacky.pro.js"></script>
 		<script src="../modules/infinite/infinite.mod.js"></script>
-		<script src="../modules/infinite/infinite-scroll.dir.js"></script>
+		<!-- <script src="../modules/infinite/infinite-scroll.dir.js"></script> -->
 
 		
 		<script src="app.js"></script>
