--- a/mock/index.html
+++ b/mock/index.html
@@ -75,7 +75,7 @@
 		<script src="../modules/callbacky/callbacky.mod.js"></script>
 		<script src="../modules/callbacky/callbacky.pro.js"></script>
 		<script src="../modules/infinite/infinite.mod.js"></script>
-		<!-- <script src="../modules/infinite/infinite-scroll.dir.js"></script> -->
+		<script src="../modules/infinite/infinite-scroll.dir.js"></script>
 
 		
 		<script src="app.js"></script>
@@ -90,7 +90,6 @@
 		<script src="pages/storage.js"></script>
 		<script src="pages/callbacky.js"></script>
 		<script src="pages/infinite.js"></script>
-		<script src="pages/test.dir.js"></script>
 		
 		<script src="//static.newton.pm/js/current/newton.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.0/masonry.pkgd.js"></script>
