--- a/mock/index.html
+++ b/mock/index.html
@@ -45,51 +45,32 @@
 		<script src="global.js"></script>
 		<script src="../bower_components/angular/angular.js"></script>
 		<script src="../bower_components/angular-route/angular-route.js"></script>
-		<script src="../bower_components/stargateJs/public/stargate.js"></script>
-		<script src="../modules/logger/logger.van.js"></script>
-		<script src="../modules/logger/rotating-log.van.js"></script>
-		<script src="../modules/logger/logger.mod.js"></script>
-		<script src="../modules/logger/logger.ser.js"></script>
-		<script src="../modules/logger/rotating-logger.ser.js"></script>
-		<script src="../modules/config/config.mod.js"></script>
-		<script src="../modules/config/config.fil.js"></script>
-		<script src="../modules/config/config.pro.js"></script>
-		<script src="../modules/dict/dict.mod.js"></script>
-		<script src="../modules/dict/dict.fil.js"></script>
-		<script src="../modules/dict/dict.pro.js"></script>
-		<script src="../modules/dict/dict.dir.js"></script>
-		<script src="../modules/analytics/analytics.mod.js"></script>
-		<script src="../modules/analytics/analytics.ser.js"></script>
-		<script src="../modules/newton/newton.mod.js"></script>
-		<script src="../modules/newton/newton.ser.js"></script>
-		<script src="../modules/meta/meta.mod.js"></script>
-		<script src="../modules/meta/meta.ser.js"></script>
-		<script src="../modules/utility/utility.mod.js"></script>
-		<script src="../modules/utility/utility.ser.js"></script>
-		<script src="../modules/storage/storage.mod.js"></script>
-		<script src="../modules/storage/storage-subset.mod.js"></script>
-		<script src="../modules/storage/depot.pro.js"></script>
-		<script src="../modules/storage/chicken.pro.js"></script>
-		<script src="../modules/storage/biscuit.pro.js"></script>
-		<script src="../modules/storage/storage.pro.js"></script>
-		<script src="../modules/callbacky/callbacky.mod.js"></script>
-		<script src="../modules/callbacky/callbacky.pro.js"></script>
-		<script src="../modules/infinite/infinite.mod.js"></script>
-		<script src="../modules/infinite/infinite-scroll.dir.js"></script>
 
-		
+		<script src="../dist/main.min.js"></script>
+		<script src="../dist/analytics.min.js"></script>
+		<script src="../dist/callbacky.min.js"></script>
+		<script src="../dist/config.min.js"></script>
+		<script src="../dist/dict.min.js"></script>
+		<script src="../dist/history.min.js"></script>
+		<script src="../dist/infinite.min.js"></script>
+		<script src="../dist/logger.min.js"></script>
+		<script src="../dist/meta.min.js"></script>
+		<script src="../dist/newton.min.js"></script>
+		<script src="../dist/storage.min.js"></script>
+		<script src="../dist/utility.min.js"></script>
+
 		<script src="app.js"></script>
-		<script src="pages/logger.js"></script>
+		<script src="pages/analytics.js"></script>
+		<script src="pages/callbacky.js"></script>
 		<script src="pages/config.js"></script>
 		<script src="pages/dict.js"></script>
-		<script src="pages/analytics.js"></script>
-		<script src="pages/newton.js"></script>
+		<script src="pages/infinite.js"></script>
+		<script src="pages/logger.js"></script>
 		<script src="pages/meta.js"></script>
 		<script src="pages/meta2.js"></script>
-		<script src="pages/utility.js"></script>
+		<script src="pages/newton.js"></script>
 		<script src="pages/storage.js"></script>
-		<script src="pages/callbacky.js"></script>
-		<script src="pages/infinite.js"></script>
+		<script src="pages/utility.js"></script>
 		
 		<script src="//static.newton.pm/js/current/newton.min.js"></script>
 
