--- a/examples/pages/callbacky.html
+++ b/examples/pages/callbacky.html
@@ -19,3 +19,6 @@
 		<button ng-click="triggerRed()">TRIGGER RED</button>
 	</div>
 </div>
+
+<div hljs hljs-include="'pages/callbacky.js'" hljs-language="JavaScript"></div>
+<div hljs hljs-include="'pages/callbacky.html'" hljs-language="HTML"></div>
