--- a/examples/pages/dict.html
+++ b/examples/pages/dict.html
@@ -10,3 +10,6 @@
 <strong>Valued key:</strong> {{'VALUED_KEY' | dict}} <br/>
 <strong>Valued key (html):</strong> <dict key='VALUED_HTML_KEY'></dict> <br/>
 <strong>Void key:</strong> {{'VOID_KEY' | dict}}
+
+<div hljs hljs-include="'pages/dict.js'" hljs-language="JavaScript"></div>
+<div hljs hljs-include="'pages/dict.html'" hljs-language="HTML"></div>
