--- a/examples/pages/infinite.html
+++ b/examples/pages/infinite.html
@@ -7,3 +7,6 @@
 	</div>
 	
 </div>
+
+<div hljs hljs-include="'pages/infinite.js'" hljs-language="JavaScript"></div>
+<div hljs hljs-include="'pages/infinite.html'" hljs-language="HTML"></div>
