--- a/examples/pages/logger.html
+++ b/examples/pages/logger.html
@@ -10,3 +10,6 @@
 <br><hr>
 <button ng-click="startRecording()">START</button> 
 <button ng-click="endRecording()">END</button> 
+
+<div hljs hljs-include="'pages/logger.js'" hljs-language="JavaScript"></div>
+<div hljs hljs-include="'pages/logger.html'" hljs-language="HTML"></div>
