--- a/examples/pages/meta.html
+++ b/examples/pages/meta.html
@@ -5,3 +5,6 @@
 	<a href="#/meta">Go to meta</a> | 
 	<a href="#/meta2">Go to meta2</a>
 </div>
+
+<div hljs hljs-include="'pages/meta.js'" hljs-language="JavaScript"></div>
+<div hljs hljs-include="'pages/meta.html'" hljs-language="HTML"></div>
