--- a/examples/pages/storage.html
+++ b/examples/pages/storage.html
@@ -9,3 +9,6 @@
 	<button ng-click="getJsObjectKey()">GET JSOBJECT SINGLE KEY</button><br/><br/>
 	<button ng-click="getCookieKey()">GET COOKIE SINGLE KEY</button>
 </div>
+
+<div hljs hljs-include="'pages/storage.js'" hljs-language="JavaScript"></div>
+<div hljs hljs-include="'pages/storage.html'" hljs-language="HTML"></div>
