--- a/examples/pages/utility.html
+++ b/examples/pages/utility.html
@@ -11,3 +11,6 @@
 		{{key}} : {{value}}
 	</p>
 </div>
+
+<div hljs hljs-include="'pages/utility.js'" hljs-language="JavaScript"></div>
+<div hljs hljs-include="'pages/utility.html'" hljs-language="HTML"></div>
