--- a/examples/pages/config.html
+++ b/examples/pages/config.html
@@ -5,3 +5,6 @@
     <input type="text" ng-model="string" placeholder="Insert key to print value" /><button ng-click="value()">Print value</button><br /><br />
     {{configValue}}
 </div>
+
+<div hljs hljs-include="'pages/config.js'" hljs-language="JavaScript"></div>
+<div hljs hljs-include="'pages/config.html'" hljs-language="HTML"></div>
