History getPrevPath() and getPrevState() methods

--- a/examples/index.html
+++ b/examples/index.html
@@ -39,16 +39,17 @@
 	</head>
 	<body>
 		<nav>
-			<a href="#/logger">Logger</a>
-			<a href="#/config">Config</a>
-			<a href="#/dict">Dict</a>
-			<a href="#/analytics">Analytics</a>
-			<a href="#/newton">Newton</a>
-			<a href="#/meta">Meta</a>
-			<a href="#/utility?query=1">Utility</a>
-			<a href="#/storage">Storage</a>
-			<a href="#/callbacky">Callbacky</a>
-			<a href="#/infinite">Infinite</a>
+			<a href="#!/logger">Logger</a>
+			<a href="#!/config">Config</a>
+			<a href="#!/dict">Dict</a>
+			<a href="#!/analytics">Analytics</a>
+			<a href="#!/newton">Newton</a>
+			<a href="#!/meta">Meta</a>
+			<a href="#!/utility?query=1">Utility</a>
+			<a href="#!/storage">Storage</a>
+			<a href="#!/callbacky">Callbacky</a>
+			<a href="#!/infinite">Infinite</a>
+			<a href="#!/history">History</a>
 		</nav>
 
 		<div ng-view=""></div>
@@ -72,6 +73,7 @@
 		<script src="../dist/newton.min.js"></script>
 		<script src="../dist/storage.min.js"></script>
 		<script src="../dist/utility.min.js"></script>
+		<script src="../dist/history.min.js"></script>
 
 		<script src="app.js"></script>
 		<script src="pages/analytics.js"></script>
@@ -85,6 +87,7 @@
 		<script src="pages/newton.js"></script>
 		<script src="pages/storage.js"></script>
 		<script src="pages/utility.js"></script>
+		<script src="pages/history.js"></script>
 		
 		<script src="//static.newton.pm/js/current/newton.min.js"></script>
 
