--- a/examples/index.html
+++ b/examples/index.html
@@ -50,6 +50,7 @@
 			<a href="#!/callbacky">Callbacky</a>
 			<a href="#!/infinite">Infinite</a>
 			<a href="#!/history">History</a>
+			<a href="#!/livehtml">LiveHtml</a>
 		</nav>
 
 		<div ng-view=""></div>
@@ -74,6 +75,7 @@
 		<script src="../dist/storage.min.js"></script>
 		<script src="../dist/utility.min.js"></script>
 		<script src="../dist/history.min.js"></script>
+		<script src="../dist/livehtml.min.js"></script>
 
 		<script src="app.js"></script>
 		<script src="pages/analytics.js"></script>
@@ -88,6 +90,7 @@
 		<script src="pages/storage.js"></script>
 		<script src="pages/utility.js"></script>
 		<script src="pages/history.js"></script>
+		<script src="pages/livehtml.js"></script>
 		
 		<script src="//static.newton.pm/js/current/newton.min.js"></script>
 
