New dist for angular and vanilla and use of barney global Object for vanilla

--- a/examples/index.html
+++ b/examples/index.html
@@ -62,20 +62,19 @@
 		<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
 		<script src="../bower_components/angular-highlightjs/build/angular-highlightjs.js"></script>
 
-		<script src="../dist/main.min.js"></script>
-		<script src="../dist/analytics.min.js"></script>
-		<script src="../dist/callbacky.min.js"></script>
-		<script src="../dist/config.min.js"></script>
-		<script src="../dist/dict.min.js"></script>
-		<script src="../dist/history.min.js"></script>
-		<script src="../dist/infinite.min.js"></script>
-		<script src="../dist/logger.min.js"></script>
-		<script src="../dist/meta.min.js"></script>
-		<script src="../dist/newton.min.js"></script>
-		<script src="../dist/storage.min.js"></script>
-		<script src="../dist/utility.min.js"></script>
-		<script src="../dist/history.min.js"></script>
-		<script src="../dist/livehtml.min.js"></script>
+		<script src="../dist/angular/analytics.js"></script>
+		<script src="../dist/angular/callbacky.js"></script>
+		<script src="../dist/angular/config.js"></script>
+		<script src="../dist/angular/dict.js"></script>
+		<script src="../dist/angular/history.js"></script>
+		<script src="../dist/angular/infinite.js"></script>
+		<script src="../dist/angular/logger.js"></script>
+		<script src="../dist/angular/meta.js"></script>
+		<script src="../dist/angular/newton.js"></script>
+		<script src="../dist/angular/storage.js"></script>
+		<script src="../dist/angular/utility.js"></script>
+		<script src="../dist/angular/history.js"></script>
+		<script src="../dist/angular/livehtml.js"></script>
 
 		<script src="app.js"></script>
 		<script src="pages/analytics.js"></script>
