--- a/examples/index.html
+++ b/examples/index.html
@@ -51,6 +51,7 @@
 			<a href="#!/infinite">Infinite</a>
 			<a href="#!/history">History</a>
 			<a href="#!/livehtml">LiveHtml</a>
+			<a href="#!/promise">Promise</a>
 		</nav>
 
 		<div ng-view=""></div>
@@ -75,6 +76,7 @@
 		<script src="../dist/angular/utility.js"></script>
 		<script src="../dist/angular/history.js"></script>
 		<script src="../dist/angular/livehtml.js"></script>
+		<script src="../dist/angular/promise.js"></script>
 
 		<script src="app.js"></script>
 		<script src="pages/analytics.js"></script>
@@ -90,6 +92,7 @@
 		<script src="pages/utility.js"></script>
 		<script src="pages/history.js"></script>
 		<script src="pages/livehtml.js"></script>
+		<script src="pages/promise.js"></script>
 		
 		<script src="//static.newton.pm/js/current/newton.min.js"></script>
 
