--- a/examples/index.html
+++ b/examples/index.html
@@ -92,7 +92,7 @@
 		<script src="pages/history.js"></script>
 		<script src="pages/livehtml.js"></script>
 		
-		<script src="//static.newton.pm/js/current/newton.min.js"></script>
+		<script src="//static.newton.pm/js/v2.1/newton.min.js"></script>
 
 		<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
