Grunt serve aligned

--- a/examples/pages/livehtml.html
+++ b/examples/pages/livehtml.html
@@ -4,5 +4,5 @@
 	
 </div>
 
-<div hljs hljs-include="'pages/infinite.js'" hljs-language="JavaScript"></div>
-<div hljs hljs-include="'pages/infinite.html'" hljs-language="HTML"></div>
+<div hljs hljs-include="'pages/livehtml.js'" hljs-language="JavaScript"></div>
+<div hljs hljs-include="'pages/livehtml.html'" hljs-language="HTML"></div>
