--- a/examples/pages/meta.html
+++ b/examples/pages/meta.html
@@ -2,8 +2,8 @@
 	<strong>title: </strong> {{ $root.meta.title }}<br/>
 	<strong>description: </strong> {{ $root.meta.description }}<br/>
 	<strong>image: </strong> {{ $root.meta.image }}<br/>
-	<a href="#/meta">Go to meta</a> | 
-	<a href="#/meta2">Go to meta2</a>
+	<a href="#!/meta">Go to meta</a> | 
+	<a href="#!/meta2">Go to meta2</a>
 </div>
 
 <div hljs hljs-include="'pages/meta.js'" hljs-language="JavaScript"></div>
