Grunt test and coverage aligned, duplicated mock.js for examples/ and test/

--- a/examples/index.html
+++ b/examples/index.html
@@ -50,7 +50,6 @@
 
 		<div ng-view=""></div>
 		
-		<script src="../mock.js"></script>
 		<script src="../bower_components/angular/angular.js"></script>
 		<script src="../bower_components/angular-route/angular-route.js"></script>
 
@@ -64,6 +63,8 @@
 		<script src="../dist/livehtml.min.js"></script>
 		<script src="../dist/meta.min.js"></script>
 		<script src="../dist/utility.min.js"></script>
+		
+		<script src="mock.js"></script>
 
 		<script src="app.js"></script>
 		<script src="pages/config.js"></script>
