Integrated utility methods to history module

--- a/examples/index.html
+++ b/examples/index.html
@@ -41,11 +41,10 @@
 		<nav>
 			<a href="#!/config">Config</a>
 			<a href="#!/dict">Dict</a>
-			<a href="#!/history">History</a>
+			<a href="#!/history?query=1">History</a>
 			<a href="#!/infinite">Infinite</a>
 			<a href="#!/livehtml">LiveHtml</a>
 			<a href="#!/meta">Meta</a>
-			<a href="#!/utility?query=1">Utility</a>
 		</nav>
 
 		<div ng-view=""></div>
@@ -62,7 +61,6 @@
 		<script src="../dist/infinite.min.js"></script>
 		<script src="../dist/livehtml.min.js"></script>
 		<script src="../dist/meta.min.js"></script>
-		<script src="../dist/utility.min.js"></script>
 		
 		<script src="mock.js"></script>
 
@@ -74,6 +72,5 @@
 		<script src="pages/livehtml.js"></script>
 		<script src="pages/meta.js"></script>
 		<script src="pages/meta2.js"></script>
-		<script src="pages/utility.js"></script>
 	</body>
 </html>
