Renamed history module to browser

--- a/examples/pages/browser.html
+++ b/examples/pages/browser.html
@@ -15,5 +15,5 @@
 	</p>
 </div>
 
-<div hljs hljs-include="'pages/history.js'" hljs-language="JavaScript"></div>
-<div hljs hljs-include="'pages/history.html'" hljs-language="HTML"></div>
+<div hljs hljs-include="'pages/browser.js'" hljs-language="JavaScript"></div>
+<div hljs hljs-include="'pages/browser.html'" hljs-language="HTML"></div>
