--- a/examples/index.html
+++ b/examples/index.html
@@ -39,9 +39,9 @@
 	</head>
 	<body>
 		<nav>
+			<a href="#!/browser?query=1">Browser</a>
 			<a href="#!/config">Config</a>
 			<a href="#!/dict">Dict</a>
-			<a href="#!/history?query=1">History</a>
 			<a href="#!/infinite">Infinite</a>
 			<a href="#!/livehtml">LiveHtml</a>
 			<a href="#!/meta">Meta</a>
@@ -57,7 +57,7 @@
 
 		<script src="../dist/config.min.js"></script>
 		<script src="../dist/dict.min.js"></script>
-		<script src="../dist/history.min.js"></script>
+		<script src="../dist/browser.min.js"></script>
 		<script src="../dist/infinite.min.js"></script>
 		<script src="../dist/livehtml.min.js"></script>
 		<script src="../dist/meta.min.js"></script>
@@ -67,7 +67,7 @@
 		<script src="app.js"></script>
 		<script src="pages/config.js"></script>
 		<script src="pages/dict.js"></script>
-		<script src="pages/history.js"></script>
+		<script src="pages/browser.js"></script>
 		<script src="pages/infinite.js"></script>
 		<script src="pages/livehtml.js"></script>
 		<script src="pages/meta.js"></script>
