--- a/examples/pages/browser.html
+++ b/examples/pages/browser.html
@@ -1,17 +1,29 @@
 <div>
+	<h1>path, state and goBack</h1>
 	<p><strong>PREVPATH: </strong> {{prevpath}}</p>
 	<p><strong>PREVSTATE: </strong> {{prevstate}}</p>
+	<p><button ng-click="goBack()">goBack()</button></p>
 
-	<h1>addQueryParams</h1>
-	<p><strong>OLD: </strong> {{oldUrl}}</p>
-	<p><strong>NEW: </strong> {{newUrl}}</p>
-	<hr/>
-	<p><strong>OLD: </strong> {{oldUrlTwo}}</p>
-	<p><strong>NEW: </strong> {{newUrlTwo}}</p>
-	<h1>getCurrentQueryString</h1>
-	<button ng-click="getCurrentQueryString()">getCurrentQueryString</button>
-	<p ng-repeat="(key, value) in queryStrings">
-		{{key}} : {{value}}
+	<h1>get/add query params</h1>
+	<p>
+		current URL<br/>
+		<button ng-click="getQueryParams()">getQueryParams</button>
+		<button ng-click="addQueryParams()">addQueryParams (hello: 'world')</button>
+	</p>
+	<p>
+		http://foo.bar<br/>
+		<button ng-click="getQueryParamsVoid()">getQueryParams</button>
+		<button ng-click="addQueryParamsVoid()">addQueryParams (hello: 'world')</button>
+	</p>
+	<p>
+		http://foo.bar/#!/ciao?pippo=no&nonsono=io&masono=pluto<br/>
+		<button ng-click="getQueryParamsAfter()">getQueryParams</button>
+		<button ng-click="addQueryParamsAfter()">addQueryParams (hello: 'world')</button>
+	</p>
+	<p>
+		http://foo.bar?pippo=no&nonsono=io&masono=pluto/#!/ciao<br/>
+		<button ng-click="getQueryParamsBefore()">getQueryParams</button>
+		<button ng-click="addQueryParamsBefore()">addQueryParams (hello: 'world')</button>
 	</p>
 </div>
 
